<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginNormal"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="30dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/btn_dummy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_untuk_melanjutkan"
                android:textAppearance="@style/textAppearance.Heading5.Bold"
                android:textColor="@color/dark" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginLarge"
            android:orientation="vertical"
            android:padding="@dimen/paddingNormal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_search"
                style="@style/TextInputLayout.Rounded"
                android:layout_width="match_parent"
                android:layout_height="@dimen/normal_height"
                app:startIconDrawable="@drawable/ic_asset_mail"
                app:startIconMinSize="@dimen/_36sdp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/email"
                    android:maxLines="1"
                    android:padding="0dp"
                    android:singleLine="true"
                    android:textAppearance="@style/textAppearance.Body2" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout.Rounded"
                android:layout_width="match_parent"
                android:layout_height="@dimen/normal_height"
                android:layout_marginTop="@dimen/marginNormal"
                app:passwordToggleEnabled="true"
                app:startIconDrawable="@drawable/ic_asset_role_access"
                app:startIconMinSize="@dimen/_36sdp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/password"
                    android:maxLines="1"
                    android:inputType="textPassword"
                    android:paddingVertical="0dp"
                    android:singleLine="true"
                    android:textAppearance="@style/textAppearance.Body2" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login"
                style="@style/Button.Normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginLarge"
                android:gravity="center"
                android:backgroundTint="@color/yellowSoft"
                android:text="@string/masuk"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/btn_reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/marginNormal"
                android:text="@string/lupa_password"
                android:textAppearance="@style/textAppearance.Body3.Bold"
                android:textColor="@color/gray2" />

            <LinearLayout
                android:id="@+id/btn_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginSmall"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/belum_punya_akun"
                    android:textAppearance="@style/textAppearance.Body3.Bold"
                    android:textColor="@color/gray2" />

                <TextView
                    android:id="@+id/btn_daftar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:text="@string/daftar"
                    android:textAppearance="@style/textAppearance.Body3.Bold"
                    android:textColor="@color/yellowSoft" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/paddingNormal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/marginLarge"
                android:gravity="center"
                android:orientation="horizontal">

                <View
                    android:layout_width="1dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="#e0e0e0"
                    android:visibility="visible" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:text="@string/atau_masuk_dengan"
                    android:textAppearance="@style/textAppearance.Caption1"
                    android:textColor="@color/gray2" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="#e0e0e0"
                    android:visibility="visible" />

            </LinearLayout>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/btn_google"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/cornerRadiusNormal"
                app:cardElevation="0dp"
                app:strokeColor="@color/gray5"
                app:strokeWidth="1dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/paddingNormal">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="10dp"
                        android:src="@drawable/ic_google" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginStart="3dp"
                        android:text="@string/google"
                        android:textColor="@color/dark" />

                </RelativeLayout>

            </com.google.android.material.card.MaterialCardView>


        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/marginTiny"
        android:layout_marginBottom="@dimen/marginNormal"
        android:text="@string/v1_1_1"
        android:textAppearance="@style/textAppearance.Caption1"
        android:textColor="@color/gray1" />

</RelativeLayout>